--- a/Versions/LightBoost 1.1-1.18.1/Changelog
+++ b/Versions/LightBoost 1.1-1.18.1/Changelog
@@ -1,1 +1,2 @@
-   - Total weight of all mods: 3,03mb
+   - Total weight of all mods: 3,07mb
+   - Added: More Culling (https://modrinth.com/mod/moreculling)
